Fixed story buttons z-index, now they correctly float under the navbar

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -6,6 +6,10 @@
  * Made By MaterializeCSS.com
  */
 
+.navbar-fixed {
+    z-index: 998;
+}
+
 .d-none {
     display: none;
 }
